--- a/java/node/build.gradle
+++ b/java/node/build.gradle
@@ -6,6 +6,7 @@
 apply plugin: 'application'
 apply plugin: "java-library"
 apply plugin: "eclipse"
+apply plugin: 'checkstyle'
 
 ext {
     appName = "node"
@@ -15,6 +16,17 @@ ext {
 configurations {
     project.archivesBaseName = "${appName}"
     jar.archiveBaseName = "${appName}"
+}
+
+//jacocoTestReport.finalizedBy jacocoTestCoverageVerification
+
+checkstyleTest { // ignore checkstyle in tests
+    ignoreFailures true
+    showViolations false
+}
+checkstyle {
+    ignoreFailures = false
+    maxWarnings = 0
 }
 
 dependencies {
