Started a tinyorm for 'reasons'.
Hopefully this isn't a bad idea. But I wanna play so why not.

--- a/java/build.gradle
+++ b/java/build.gradle
@@ -58,6 +58,9 @@ allprojects {
         implementation libs.slf4j.api
         implementation libs.bcprov
 
+        compileOnly libs.immutables.value
+        annotationProcessor libs.immutables.value
+
         implementation libs.jackson.annotations
         implementation libs.jackson.core
         implementation libs.jackson.databind
@@ -71,6 +74,10 @@ allprojects {
         testImplementation(libs.junit.jupiter.params)
         testImplementation(libs.mockito.junit.jupiter)
         testImplementation(libs.mockito.core)
+
+
+        testCompileOnly libs.immutables.value
+        testAnnotationProcessor libs.immutables.value
 
         // Logging in tests
         testImplementation libs.logback.classic
