Refactoring of tinyorm while I go back and do the real thing. lol

--- a/java/tiny-orm/build.gradle
+++ b/java/tiny-orm/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     testImplementation libs.logback.access
     testImplementation libs.jakarta.servlet.api
     testImplementation libs.javax.servlet.api
+
+    testImplementation libs.hsqldb
 }
 
