--- a/java/node/src/main/resources/config.yaml
+++ b/java/node/src/main/resources/config.yaml
@@ -4,6 +4,7 @@ logging:
   level: INFO
   loggers:
     com.codeheadsystems: DEBUG
+    com.codeheadsystems.dstore.node: TRACE
     com.mchange.v2.c3p0: WARN
   appenders:
     - type: console
