--- a/java/settings.gradle
+++ b/java/settings.gradle
@@ -24,5 +24,5 @@ dependencyResolutionManagement {
 }
 
 // All subprojects we want to build.
-include ':common', ':node'
+include ':common', ':node', ':node-integ'
 
