Moved the Deleting file visitor into codehead-test and updated the release version.
Also moved us to pulling in the snapshot version

--- a/java/node-integ/build.gradle
+++ b/java/node-integ/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     implementation libs.openfeign.java11
     implementation libs.openfeign.jaxrs2
 
+    implementation libs.retrofit
+    implementation libs.retrofit2.converter.jackson
+
     testImplementation libs.dropwizard.testing
 
     testImplementation libs.jackson.dataformat.yaml
