--- a/java/build.gradle
+++ b/java/build.gradle
@@ -23,7 +23,7 @@ buildscript {
 
 
 ext {
-    codeheadTestVersion = '1.0.4'
+    codeheadTestVersion = '1.0.6-SNAPSHOT'
     codeheadMetricsVersion = '1.0.1'
     statemachineVersion = '1.0.1-SNAPSHOT'
     gamelibVersion = '1.0.3-SNAPSHOT'
