--- a/.editorconfig
+++ b/.editorconfig
@@ -285,41 +285,41 @@ ij_java_wrap_first_method_in_call_chain = false
 ij_java_wrap_long_lines = false
 
 [{*.ant,*.fxml,*.jhm,*.jnlp,*.jrxml,*.pom,*.rng,*.tld,*.wadl,*.wsdl,*.xml,*.xsd,*.xsl,*.xslt,*.xul}]
-# ij_xml_align_attributes = true
-# ij_xml_align_text = false
-# ij_xml_attribute_wrap = normal
-# ij_xml_block_comment_add_space = false
-# ij_xml_block_comment_at_first_column = true
-# ij_xml_keep_blank_lines = 2
-# ij_xml_keep_indents_on_empty_lines = false
-# ij_xml_keep_line_breaks = true
-# ij_xml_keep_line_breaks_in_text = true
-# ij_xml_keep_whitespaces = false
-# ij_xml_keep_whitespaces_around_cdata = preserve
-# ij_xml_keep_whitespaces_inside_cdata = false
-# ij_xml_line_comment_at_first_column = true
-# ij_xml_space_after_tag_name = false
-# ij_xml_space_around_equals_in_attribute = false
-# ij_xml_space_inside_empty_tag = false
-# ij_xml_text_wrap = normal
-# ij_xml_use_custom_settings = false
+ij_xml_align_attributes = true
+ij_xml_align_text = false
+ij_xml_attribute_wrap = normal
+ij_xml_block_comment_add_space = false
+ij_xml_block_comment_at_first_column = true
+ij_xml_keep_blank_lines = 2
+ij_xml_keep_indents_on_empty_lines = false
+ij_xml_keep_line_breaks = true
+ij_xml_keep_line_breaks_in_text = true
+ij_xml_keep_whitespaces = false
+ij_xml_keep_whitespaces_around_cdata = preserve
+ij_xml_keep_whitespaces_inside_cdata = false
+ij_xml_line_comment_at_first_column = true
+ij_xml_space_after_tag_name = false
+ij_xml_space_around_equals_in_attribute = false
+ij_xml_space_inside_empty_tag = false
+ij_xml_text_wrap = normal
+ij_xml_use_custom_settings = false
 
 [{*.har,*.jsb2,*.jsb3,*.json,.babelrc,.eslintrc,.prettierrc,.stylelintrc,bowerrc,jest.config}]
-# indent_size = 2
-# ij_json_array_wrapping = split_into_lines
-# ij_json_keep_blank_lines_in_code = 0
-# ij_json_keep_indents_on_empty_lines = false
-# ij_json_keep_line_breaks = true
-# ij_json_keep_trailing_comma = false
-# ij_json_object_wrapping = split_into_lines
-# ij_json_property_alignment = do_not_align
-# ij_json_space_after_colon = true
-# ij_json_space_after_comma = true
-# ij_json_space_before_colon = false
-# ij_json_space_before_comma = false
-# ij_json_spaces_within_braces = false
-# ij_json_spaces_within_brackets = false
-# ij_json_wrap_long_lines = false
+indent_size = 2
+ij_json_array_wrapping = split_into_lines
+ij_json_keep_blank_lines_in_code = 0
+ij_json_keep_indents_on_empty_lines = false
+ij_json_keep_line_breaks = true
+ij_json_keep_trailing_comma = false
+ij_json_object_wrapping = split_into_lines
+ij_json_property_alignment = do_not_align
+ij_json_space_after_colon = true
+ij_json_space_after_comma = true
+ij_json_space_before_colon = false
+ij_json_space_before_comma = false
+ij_json_spaces_within_braces = false
+ij_json_spaces_within_brackets = false
+ij_json_wrap_long_lines = false
 
 [{*.kt,*.kts}]
 # ij_kotlin_align_in_columns_case_branch = false
@@ -426,14 +426,14 @@ ij_java_wrap_long_lines = false
 # ij_markdown_wrap_text_inside_blockquotes = true
 
 [{*.yaml,*.yml}]
-# indent_size = 2
-# ij_yaml_align_values_properties = do_not_align
-# ij_yaml_autoinsert_sequence_marker = true
-# ij_yaml_block_mapping_on_new_line = false
-# ij_yaml_indent_sequence_value = true
-# ij_yaml_keep_indents_on_empty_lines = false
-# ij_yaml_keep_line_breaks = true
-# ij_yaml_sequence_on_new_line = false
-# ij_yaml_space_before_colon = false
-# ij_yaml_spaces_within_braces = true
-# ij_yaml_spaces_within_brackets = true
+indent_size = 2
+ij_yaml_align_values_properties = do_not_align
+ij_yaml_autoinsert_sequence_marker = true
+ij_yaml_block_mapping_on_new_line = false
+ij_yaml_indent_sequence_value = true
+ij_yaml_keep_indents_on_empty_lines = false
+ij_yaml_keep_line_breaks = true
+ij_yaml_sequence_on_new_line = false
+ij_yaml_space_before_colon = false
+ij_yaml_spaces_within_braces = true
+ij_yaml_spaces_within_brackets = true
