Added in node-common and node-javaClient projects

--- a/java/node-common/build.gradle
+++ b/java/node-common/build.gradle
@@ -3,14 +3,12 @@
  * Ned Wolpert <ned.wolpert@codeheadsystems.com>
  */
 
-apply plugin: 'application'
 apply plugin: "java-library"
 apply plugin: "eclipse"
 apply plugin: 'checkstyle'
 
 ext {
-    appName = "node"
-    configPath = "${rootProject.projectDir}/node/src/main/resources/"
+    appName = "node-common"
 }
 
 configurations {
@@ -31,17 +29,7 @@ checkstyle {
 
 dependencies {
     implementation project(":common")
-    implementation project(":node-common")
     implementation libs.guava
-
-    // SQL
-    implementation libs.hsqldb
-    implementation libs.liquibase.core
-    implementation libs.c3p0
-    implementation libs.jdbi.core
-    implementation libs.jdbi.testing
-    implementation libs.jdbi.guava
-    implementation libs.jdbi.jackson2
 
     implementation libs.javax.inject
     implementation libs.dagger
@@ -55,8 +43,7 @@ dependencies {
     implementation libs.dropwizard.core
     implementation libs.dropwizard.jackson
     implementation libs.dropwizard.metrics.graphite
-    implementation libs.micrometer.core
-    implementation libs.metrics.core
+
 
     testImplementation libs.jackson.dataformat.yaml
     testAnnotationProcessor libs.dagger.compiler
@@ -67,9 +54,4 @@ dependencies {
     implementation libs.logback.access
     implementation libs.jakarta.servlet.api
     implementation libs.javax.servlet.api
-}
-
-run {
-    args 'server', configPath + 'config.yaml'
-    mainClassName = "com.codeheadsystems.dstore.node.Node"
 }
