--- a/java/node-javaClient/build.gradle
+++ b/java/node-javaClient/build.gradle
@@ -3,14 +3,12 @@
  * Ned Wolpert <ned.wolpert@codeheadsystems.com>
  */
 
-apply plugin: 'application'
 apply plugin: "java-library"
 apply plugin: "eclipse"
 apply plugin: 'checkstyle'
 
 ext {
-    appName = "node"
-    configPath = "${rootProject.projectDir}/node/src/main/resources/"
+    appName = "node-javaClient"
 }
 
 configurations {
@@ -34,15 +32,6 @@ dependencies {
     implementation project(":node-common")
     implementation libs.guava
 
-    // SQL
-    implementation libs.hsqldb
-    implementation libs.liquibase.core
-    implementation libs.c3p0
-    implementation libs.jdbi.core
-    implementation libs.jdbi.testing
-    implementation libs.jdbi.guava
-    implementation libs.jdbi.jackson2
-
     implementation libs.javax.inject
     implementation libs.dagger
     annotationProcessor libs.dagger.compiler
@@ -58,6 +47,18 @@ dependencies {
     implementation libs.micrometer.core
     implementation libs.metrics.core
 
+    implementation libs.openfeign.core
+    implementation libs.openfeign.jackson
+    implementation libs.feign.slf4j
+    implementation libs.feign.micrometer
+    implementation libs.openfeign.java11
+    implementation libs.openfeign.jaxrs2
+
+    implementation libs.retrofit
+    implementation libs.retrofit2.converter.jackson
+
+    testImplementation libs.dropwizard.testing
+
     testImplementation libs.jackson.dataformat.yaml
     testAnnotationProcessor libs.dagger.compiler
 
@@ -67,9 +68,4 @@ dependencies {
     implementation libs.logback.access
     implementation libs.jakarta.servlet.api
     implementation libs.javax.servlet.api
-}
-
-run {
-    args 'server', configPath + 'config.yaml'
-    mainClassName = "com.codeheadsystems.dstore.node.Node"
 }
