--- a/java/node/src/main/resources/config.yaml
+++ b/java/node/src/main/resources/config.yaml
@@ -1,4 +1,4 @@
-databaseDirectory: /tmp
+databaseDirectory: /tmp/database
 
 logging:
   level: INFO
@@ -10,18 +10,18 @@ logging:
     - type: console
       logFormat: "%d{HH:mm:ss.SSS} [%thread] [%X{trace}] %-5level %logger{36} - %msg%n"
 
-metrics:
-  frequency: 1 minute
-  reportOnStop: true
-  reporters:
-    - type: log
-      logger: metrics
-      markerName: SLF4j
-    - type: graphite
-      host: localhost
-      port: 2003
-      prefix: node
-      transport: tcp
+#metrics:
+#  frequency: 1 minute
+#  reportOnStop: true
+#  reporters:
+#    - type: log
+#      logger: metrics
+#      markerName: SLF4j
+#    - type: graphite
+#      host: localhost
+#      port: 2003
+#      prefix: node
+#      transport: tcp
 
 health:
   healthCheckUrlPaths: [ "/health-check" ]
