Updating infrastructure for new projects.
Kinda sizable change. Adding the control and proxy server. Creating a
common server project so resources that are not specific to dropwizard
services can be easily shared. I'd like to do the dagger creationg of
the Server runtime, but that might take a bit. This should at least
reduce the bloat.

--- a/java/control/build.gradle
+++ b/java/control/build.gradle
@@ -9,7 +9,7 @@ apply plugin: "eclipse"
 apply plugin: 'checkstyle'
 
 ext {
-    appName = "node"
+    appName = "control"
     configPath = "${rootProject.projectDir}/node/src/main/resources/"
 }
 
@@ -32,11 +32,9 @@ checkstyle {
 dependencies {
     implementation project(":common")
     implementation project(":server-common")
-    implementation project(":node-common")
     implementation libs.guava
 
     // SQL
-    implementation libs.hsqldb
     implementation libs.liquibase.core
     implementation libs.c3p0
     implementation libs.jdbi.core
@@ -72,5 +70,5 @@ dependencies {
 
 run {
     args 'server', configPath + 'config.yaml'
-    mainClassName = "com.codeheadsystems.dstore.node.Node"
+    mainClassName = "com.codeheadsystems.dstore.control.Control"
 }
