--- a/java/node-integ/build.gradle
+++ b/java/node-integ/build.gradle
@@ -29,6 +29,7 @@ checkstyle {
 
 dependencies {
     implementation project(":common")
+    implementation project(":server-common")
     implementation project(":node-common")
     implementation project(":node-javaClient")
     implementation project(":node") // needed for dropwizard config
