--- a/java/node/build.gradle
+++ b/java/node/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation libs.dropwizard.metrics.graphite
     implementation libs.micrometer.core
     implementation libs.metrics.core
+    implementation libs.metrics.jdbi
 
     testImplementation libs.jackson.dataformat.yaml
 
