--- a/java/settings.gradle
+++ b/java/settings.gradle
@@ -24,8 +24,8 @@ dependencyResolutionManagement {
 }
 
 // All subprojects we want to build.
-include ':common', ':server-common',
+include ':common', ':server-common', ':common-javaClient',
         ':node-common', ':node', ':node-javaClient', ':node-integ',
-        ':control-common', ':control',
+        ':control-common', ':control', ':control-javaClient',
         ':proxy'
 
