--- a/java/common-javaClient/build.gradle
+++ b/java/common-javaClient/build.gradle
@@ -8,7 +8,7 @@ apply plugin: "eclipse"
 apply plugin: 'checkstyle'
 
 ext {
-    appName = "node-javaClient"
+    appName = "common-javaClient"
 }
 
 configurations {
@@ -28,9 +28,11 @@ checkstyle {
 }
 
 dependencies {
-    implementation project(":common")
-    implementation project(":common-javaClient")
-    implementation project(":node-common")
+    implementation libs.guava
+
+    implementation libs.javax.inject
+    implementation libs.dagger
+    annotationProcessor libs.dagger.compiler
 
     implementation libs.jackson.annotations
     implementation libs.jackson.core
@@ -39,6 +41,7 @@ dependencies {
     implementation libs.dropwizard.auth
     implementation libs.dropwizard.core
     implementation libs.dropwizard.jackson
+    implementation libs.dropwizard.metrics.graphite
     implementation libs.micrometer.core
     implementation libs.metrics.core
 
@@ -51,6 +54,11 @@ dependencies {
 
     implementation libs.retrofit
     implementation libs.retrofit2.converter.jackson
+
+    testImplementation libs.dropwizard.testing
+
+    testImplementation libs.jackson.dataformat.yaml
+    testAnnotationProcessor libs.dagger.compiler
 
     // Logging stuff... need all these for logback changes
     implementation libs.logback.classic
