Added trace to the java client

--- a/java/common-javaClient/build.gradle
+++ b/java/common-javaClient/build.gradle
@@ -28,6 +28,7 @@ checkstyle {
 }
 
 dependencies {
+    implementation project(":common")
     implementation libs.guava
 
     implementation libs.javax.inject
