A few more integ tests... and integ isolation.
Now, by default, only non-integration tests are executed when you call gradle.
You have to specify 'integ' to run the integration tests. I updated the readme
for the java project to indicate this.

--- a/java/build.gradle
+++ b/java/build.gradle
@@ -146,5 +146,17 @@ allprojects {
         }
     }
 
-}
+    tasks.named('test') {
+        useJUnitPlatform {
+            excludeTags 'integ'
+            excludeTags 'experiment'
+        }
 
+    }
+
+    def integ= tasks.register("integ", Test) {
+        useJUnitPlatform {
+            includeTags "integ"
+        }
+    }
+}
