--- a/java/node-integ/build.gradle
+++ b/java/node-integ/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     implementation project(":node") // needed for dropwizard config
     implementation libs.guava
 
+    // etcd
+    testImplementation libs.jetcd.test
+
     implementation libs.javax.inject
     implementation libs.dagger
     annotationProcessor libs.dagger.compiler
