--- a/java/control-integ/src/test/resources/control-integ-config.yaml
+++ b/java/control-integ/src/test/resources/control-integ-config.yaml
@@ -31,6 +31,18 @@ database:
 #      prefix: node
 #      transport: tcp
 
+server:
+  adminMinThreads: 1
+  adminMaxThreads: 64
+  adminContextPath: /
+  applicationContextPath: /
+  applicationConnectors:
+    - type: http
+      port: 8090
+  adminConnectors:
+    - type: http
+      port: 8091
+
 health:
   healthCheckUrlPaths: [ "/health-check" ]
   healthChecks:
