Added xper test flag for experimental stuff

--- a/java/build.gradle
+++ b/java/build.gradle
@@ -159,4 +159,10 @@ allprojects {
             includeTags "integ"
         }
     }
+
+    def xper= tasks.register("xper", Test) {
+        useJUnitPlatform {
+            includeTags "experiment"
+        }
+    }
 }
