--- a/java/server-common/build.gradle
+++ b/java/server-common/build.gradle
@@ -36,7 +36,9 @@ dependencies {
     implementation libs.dropwizard.metrics.graphite
     implementation libs.micrometer.core
     implementation libs.metrics.core
+
     implementation libs.jetcd.core
+    testImplementation libs.jetcd.test
 
     testImplementation libs.jackson.dataformat.yaml
 
