--- a/java/proxy/build.gradle
+++ b/java/proxy/build.gradle
@@ -32,6 +32,7 @@ checkstyle {
 dependencies {
     implementation project(":common")
     implementation project(":server-common")
+    implementation project(":config-common")
 
     implementation libs.dropwizard.auth
     implementation libs.dropwizard.core
