--- a/java/control/build.gradle
+++ b/java/control/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation project(":server-common")
     implementation project(":config-common")
     implementation project(":control-common")
+    implementation project(":node-common")
 
     // SQL
     implementation libs.liquibase.core
