--- a/java/control-integ/src/test/resources/control-integ-config.yaml
+++ b/java/control-integ/src/test/resources/control-integ-config.yaml
@@ -18,6 +18,9 @@ database:
   validationQuery: "/* MyService Health Check */ call now()"
 # Validation query note: HSQL is weird. We won't have to do this with postgresql.
 
+etcConfiguration:
+  target: ip:///localhost:2379
+
 #metrics:
 #  frequency: 1 minute
 #  reportOnStop: true
