--- a/java/control/src/main/resources/config.yaml
+++ b/java/control/src/main/resources/config.yaml
@@ -43,6 +43,9 @@ server:
     - type: http
       port: 8081
 
+etcConfiguration:
+  target: ip:///localhost:2379
+
 health:
   healthCheckUrlPaths: [ "/health-check" ]
   healthChecks:
