Ready to integ test control plane adding a table
https://github.com/wolpert/dstore/issues/24

--- a/java/control-integ/src/test/resources/control-integ-config.yaml
+++ b/java/control-integ/src/test/resources/control-integ-config.yaml
@@ -18,7 +18,7 @@ database:
   validationQuery: "/* MyService Health Check */ call now()"
 # Validation query note: HSQL is weird. We won't have to do this with postgresql.
 
-etcConfiguration:
+etcdConfiguration:
   target: ip:///localhost:2379
 
 #metrics:
