--- a/java/endToEnd/build.gradle
+++ b/java/endToEnd/build.gradle
@@ -67,8 +67,9 @@ dependencies {
     implementation libs.retrofit
     implementation libs.retrofit2.converter.jackson
 
+    testImplementation libs.testcontainers
+    testImplementation libs.testcontainers.postgresql
     testImplementation libs.dropwizard.testing
-
     testImplementation libs.jackson.dataformat.yaml
     testAnnotationProcessor libs.dagger.compiler
 
