--- a/java/endToEnd/src/test/resources/control-config.yaml
+++ b/java/endToEnd/src/test/resources/control-config.yaml
@@ -68,3 +68,13 @@ health:
         initialDelay: 5s
         failureAttempts: 1
         successAttempts: 2
+    - name: EtcdHealthCheck
+      type: alive
+      critical: true
+      initialState: true
+      schedule:
+        checkInterval: 10s
+        downtimeInterval: 2s
+        initialDelay: 5s
+        failureAttempts: 1
+        successAttempts: 2
