--- a/java/endToEnd/build.gradle
+++ b/java/endToEnd/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation libs.guava
 
     // etcd
+    testImplementation libs.jetcd.core
     testImplementation libs.jetcd.test
 
     implementation libs.javax.inject
