Started adding the control accessor and fixed up so full builds run

--- a/java/node/build.gradle
+++ b/java/node/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 
     // etcd
     implementation libs.jetcd.core
+    testImplementation libs.jetcd.test
 
     implementation libs.dropwizard.auth
     implementation libs.dropwizard.core
