Got the accessor ready

--- a/java/control/build.gradle
+++ b/java/control/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     testImplementation libs.dropwizard.testing
     testImplementation project(":control-javaClient")
     testImplementation libs.jetcd.test
+    testImplementation libs.openfeign.core
 }
 
 run {
