--- a/java/node/build.gradle
+++ b/java/node/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation libs.metrics.core
     implementation libs.metrics.jdbi
 
+    implementation libs.openfeign.core
+
     testImplementation libs.jackson.dataformat.yaml
     testImplementation libs.dropwizard.testing
     testImplementation project(":node-javaClient")
