Node is confirmed to self-register in the e2e test via logs.
Need to validate setup in the e2e tests next.

--- a/java/endToEnd/src/test/resources/node-config.yaml
+++ b/java/endToEnd/src/test/resources/node-config.yaml
@@ -1,5 +1,8 @@
 databaseDirectory: /tmp/endToEnd
 runDatabaseInMemory: true
+controlPlaneUrl: http://localhost:9090/
+nodeHost: localhost
+nodePort: 9080
 
 logging:
   level: INFO
