End to end tests actually aren't working that well.
Looks like first, the control plane logs are stuck at info for some reason, and then stop when
the node comes up. This may have to do with how dropwizard support works. Second, when starting
a new tenant table the control plane times out talking to etcd, but its basically impossible to
debug in the current state.

I'm going to work on a docker compose to light up the etcd instance, control plane, nodes and
postgresql database. Then the end-to-end test should work better at that point.

--- a/java/endToEnd/src/test/resources/node-config.yaml
+++ b/java/endToEnd/src/test/resources/node-config.yaml
@@ -7,9 +7,8 @@ nodePort: 9080
 logging:
   level: INFO
   loggers:
-    com.codeheadsystems: DEBUG
-    com.codeheadsystems.dstore.node: TRACE
-    com.mchange.v2.c3p0: TRACE
+    com.codeheadsystems.dstore: TRACE
+    com.mchange.v2.c3p0: WARN
   appenders:
     - type: console
       logFormat: "%d{HH:mm:ss.SSS} [%thread] [trace:%X{trace}] %-5level %logger{36} - %msg%n"
